--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
       6rem,
       1fr
     );
-  grid-template-rows: repeat(3, min-content) 70vh;
+  grid-template-rows: repeat(3, min-content) 70vh repeat(5, min-content);
   grid-row-gap: 1.6rem;
   margin-top: 1.6rem;
 }
@@ -364,7 +364,7 @@ body {
   z-index: 10;
 }
 
-.slide-btn:focus{
+.slide-btn:focus {
   background-color: #0071bc;
 }
 
@@ -380,7 +380,6 @@ body {
 .slide-btn-4 {
   left: 53%;
 }
-
 
 .slide-btn-1:focus ~ .slideshow-wrapper {
   animation: none;
@@ -400,3 +399,63 @@ body {
 }
 
 /* End of Banner */
+
+/* Day offer */
+.day-offer {
+  grid-column: 2 / 10;
+  grid-row: 5 / 6;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, min-content);
+  grid-gap: 1.6rem 3.2rem;
+  justify-items: center;
+}
+
+.day-offer-img-one {
+  grid-column: 1 / 3;
+  grid-row: 1 / -1;
+  width: 100%;
+
+  
+}
+
+.day-offer-heading {
+  grid-column: 3 / -1;
+  grid-row: 1 / 2;
+  font-size: 6rem;
+  color: #0071bc;
+}
+
+.day-offer-paragraph {
+  grid-column: 3 / -1;
+  grid-row: 2 / 3;
+  font-size: 3rem;
+  color: #0071bc;
+}
+
+.day-offer-btn{
+  grid-column: 3 / -1;
+  grid-row: 3 / 4;
+  width: 16rem;
+  padding: 1rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background: linear-gradient(to top, #00154c, #12376e, #23487f);
+  border: none;
+  border-radius: 5rem;
+  text-transform: uppercase;
+  outline: none;
+  box-shadow: .2rem .2rem 1rem #777;
+}
+
+.day-offer-btn{
+  box-shadow: .2rem .2rem 2rem #777;
+}
+
+.day-offer-img-two{
+  grid-column: 3 / -1;
+  grid-row: 4 / -1;
+  width: 100%;
+  align-self: end;
+}
+/* end of Day offer */
